# local-livekit-plugins

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FIX_STREAMING_COMPATIBILITY.md  LATENCY_OPTIMIZATION.md  LICENSE  QUICK_START_OPTIMIZATION.md  README.md  docker-compose.prod.yaml  docker-compose.yaml  et --soft b6e9969  livekit.yaml  pyproject.toml
examples/: .env.local.example  test.py  voice_agent.py  voice_agent_optimized.py
src/livekit_local_plugins/: __init__.py  faster_whisper_stt.py  piper_tts.py
src/local_livekit_plugins/: __init__.py  faster_whisper_stt.py  grok_stt.py  grok_tts.py  piper_tts_streaming.py  test_grok_tts_wordBYword.py
src/local_livekit_plugins/fillers/: fillers.py
